Fix the spacing problem of reducing app content

--- a/app/src/popup/Popup.css
+++ b/app/src/popup/Popup.css
@@ -1,6 +1,8 @@
 html, body {
   scrollbar-width: none;
   overflow: hidden;
+  height: fit-content;
+  width: fit-content;
 }
 .popup-view {
   border: 2px solid #00e080;
